--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,88 +1,4 @@
-@import "colors";
-
-@mixin pone-font-size($font-size) {
-	font-size: $font-size;
-	line-height: $font-size;
-}
-
-@mixin pone-outline($color) {
-	text-shadow: 2px 2px 2px $color, -1px 1px 0 $color, 1px -1px 0 $color, -1px -1px 0 $color;
-}
-
-%fg-color {
-	caret-color: $twi-eye-gradient-dark;
-	color: $twi-eye-gradient-dark;
-	fill: $twi-eye-gradient-dark;
-}
-%font {
-	font-family: "Futura PT", "Harmonia Sans", Verdana, sans-serif;
-	-moz-osx-font-smoothing: grayscale;
-	-webkit-font-smoothing: antialiased;
-	font-smooth: always;
-	text-rendering: optimizeLegibility;
-}
-%no-appearance {
-	-moz-appearance: none;
-	-webkit-appearance: none;
-}
-
-::moz-selection { background-color: $twi-hair-highlight-pink; }
-::selection { background-color: $twi-hair-highlight-pink; }
-a {
-	border-bottom: 1px solid;
-	text-decoration: none;
-
-	&:link { color: $twi-hair-primary; }
-	&:visited { color: $twi-hair-highlight-purple; }
-	// &:focus, &:hover { }
-	&:active { color: $twi-hair-highlight-pink; }
-}
-body {
-	@extend %fg-color;
-	@extend %font;
-	// @include pone-set-fg-color($twi-eye-gradient-dark);
-	background-attachment: fixed;
-	background-color: $twi-body-fill;
-	background-image: linear-gradient(145deg, $twi-body-fill 81%, $twi-hair-primary 82%, $twi-hair-highlight-purple 91%, $twi-hair-highlight-pink 94%, $twi-hair-primary);
-	background-size: 100vw 100vh;
-}
-button {
-	@extend %fg-color;
-	@extend %font;
-}
-fieldset {
-	border-color: $twi-eye-gradient-dark;
-	border-width: 1px;
-}
-h1, h2 {
-	@include pone-outline($twi-eye-gradient-dark);
-	color: $twi-hair-highlight-pink;
-	fill: $twi-hair-highlight-pink;
-	font-family: Equestria;
-	font-weight: normal;
-	letter-spacing: 3px;
-	margin: 1rem 0;
-}
-h1::moz-selection, h2::moz-selection { color: $twi-hair-highlight-purple; }
-h1::selection, h2::selection { color: $twi-hair-highlight-purple; }
-h1 { @include pone-font-size(3rem); }
-h2 { @include pone-font-size(2rem); }
-input {
-	@extend %fg-color;
-	@extend %font;
-	border-color: $twi-eye-highlight-dark $twi-eye-highlight-light $twi-eye-highlight-light $twi-eye-highlight-dark;
-}
-input[type=number] { @extend %no-appearance; }
-option {
-	@extend %fg-color;
-	@extend %font;
-	@extend %no-appearance;
-}
-select {
-	@extend %fg-color;
-	@extend %font;
-	// @extend %no-appearance;
-}
+input[type=number] { width: 3rem; }
 #div-sound-types {
 	display: flex;
 	flex-wrap: wrap;
